Fixed bug #60523 (PHP Errors are not reported in browsers using built-in SAPI)